--- a/_posts/2015-06-01-services-1.markdown
+++ b/_posts/2015-06-01-services-1.markdown
@@ -2,7 +2,7 @@
 layout: default
 img: ipad.png
 category: Services
-title: Death to the Stock Photo:<br>Special Thanks
+title: 体験学習における学習者の能動的な行動を誘発させるアプリケーション
 description: |
 ---
   A special thanks to [Death to the Stock Photo](http://join.deathtothestockphoto.com/) for providing the photographs that you see in this template.  Visit their website to become a member!
