--- a/_posts/2015-06-01-services-1.markdown
+++ b/_posts/2015-06-01-services-1.markdown
@@ -5,4 +5,4 @@ category: Services
 title: 体験学習における学習者の能動的な行動を促すモバイルアプリ
 description: |
 ---
- 体験学習は，「場」を体感的に理解する行為であり，そのためには学習者の積極的な関与の姿勢が重要です．本アプリケーションでは，ウォークラリーを利用して，学習者に断片的な情報を与え能動的な行動を促すことを狙っています．
+ 体験学習は，「場」を体感的に理解する行為であり，そのためには学習者の積極的な関与の姿勢が重要です．本アプリケーションでは，ウォークラリーを利用して，学習者に断片的な情報を与え能動的な行動を促すことを狙っています．共同研究者としてアプリケーションの開発に携わりました．
